ендпоинт получения всех КИ
